# SpectreCAPI

./: CMakeLists.txt  spectre-algorithm_v0.c  spectre-types.c  spectre-types.h  spectre-util.c  spectre-util.h
CMake/: CompileSodium.cmake
